# gsvdm2py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gsvdm2py/: __init__.py  gsvd.py
